# lumiere-client-python

./: .env.example  .gitignore  README.md  client.py  pyproject.toml  requirements.txt
deploy/: lumiere-client.init.d
lumiere-client/: animate.py  client.py  config.py  off.py  utils.py
