[project]
name = "lumiere-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-socketio[client]>=5.5.0,<6.0.0",
    "requests>=2.25.1,<3.0.0",
    "rpi-ws281x>=4.3.4,<5.0.0",
    "python-dotenv>=0.19.2,<2.0.0",
    "websocket-client>=1.2.3,<2.0.0",
    "coloraide>=2.12.0,<3.0.0",
    "easing-functions>=1.0.4,<2.0.0",
    "tenacity>=8.2.3,<9.0.0"
]
